update and fix errors

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <main>
       <!-- Hero page -->
-      <section class="hero-page">
+      <section class="section hero-page">
         <div class="container">
           <div class="hero-wrap">
             <h1 class="hero-page-title">
@@ -73,7 +73,7 @@
         </div>
       </section>
       <!--  Features -->
-      <section class="features-section">
+      <section class="section features-section">
         <div class="container">
           <h2 class="features-title visually-hidden">Features</h2>
           <ul class="features-list">
@@ -109,7 +109,7 @@
         </div>
       </section>
       <!-- Our Team -->
-      <section class="team-section">
+      <section class="section team-section">
         <div class="container">
           <h2 class="team-section-title">Our Team</h2>
           <ul class="members-list">
@@ -153,7 +153,7 @@
         </div>
       </section>
       <!-- Portfolio -->
-      <section class="portfolio-section">
+      <section class="section portfolio-section">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="case-list">
@@ -163,8 +163,10 @@
                 alt="bank app screenshots"
                 width="360"
               />
-              <h3 class="portfolio-element-subject">Banking App</h3>
-              <p class="portfolio-element-desc">App</p>
+              <div class="portfolio-element-bottom">
+                <h3 class="portfolio-element-subject">Banking App</h3>
+                <p class="portfolio-element-desc">App</p>
+              </div>
             </li>
             <li class="portfolio-element">
               <img
@@ -172,8 +174,10 @@
                 alt="phone cashless payment"
                 width="360"
               />
-              <h3 class="portfolio-element-subject">Cashless Payment</h3>
-              <p class="portfolio-element-desc">Marketing</p>
+              <div class="portfolio-element-bottom">
+                <h3 class="portfolio-element-subject">Cashless Payment</h3>
+                <p class="portfolio-element-desc">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-element">
               <img
@@ -181,8 +185,10 @@
                 alt="laptop and phone"
                 width="360"
               />
-              <h3 class="portfolio-element-subject">Meditation App</h3>
-              <p class="portfolio-element-desc">App</p>
+              <div class="portfolio-element-bottom">
+                <h3 class="portfolio-element-subject">Meditation App</h3>
+                <p class="portfolio-element-desc">App</p>
+              </div>
             </li>
             <li class="portfolio-element">
               <img
@@ -190,8 +196,10 @@
                 alt="car dashboard"
                 width="360"
               />
-              <h3 class="portfolio-element-subject">Taxi Service</h3>
-              <p class="portfolio-element-desc">Marketing</p>
+              <div class="portfolio-element-bottom">
+                <h3 class="portfolio-element-subject">Taxi Service</h3>
+                <p class="portfolio-element-desc">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-element">
               <img
@@ -199,8 +207,10 @@
                 alt="phone screensavers"
                 width="360"
               />
-              <h3 class="portfolio-element-subject">Screen Illustrations</h3>
-              <p class="portfolio-element-desc">Design</p>
+              <div class="portfolio-element-bottom">
+                <h3 class="portfolio-element-subject">Screen Illustrations</h3>
+                <p class="portfolio-element-desc">Design</p>
+              </div>
             </li>
             <li class="portfolio-element">
               <img
@@ -208,8 +218,10 @@
                 alt="girl with phone"
                 width="360"
               />
-              <h3 class="portfolio-element-subject">Online Courses</h3>
-              <p class="portfolio-element-desc">Marketing</p>
+              <div class="portfolio-element-bottom">
+                <h3 class="portfolio-element-subject">Online Courses</h3>
+                <p class="portfolio-element-desc">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
