fix checkout errors

--- a/index.html
+++ b/index.html
@@ -40,20 +40,18 @@
           </ul>
         </nav>
         <address>
-          <div class="address-list-wrap">
-            <ul class="address-list">
-              <li>
-                <a class="address-link" href="mailto:info@devstudio.com"
-                  >info@devstupdio.com</a
-                >
-              </li>
-              <li>
-                <a class="address-link" href="tel:+110001111111"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-            </ul>
-          </div>
+          <ul class="address-list">
+            <li>
+              <a class="address-link" href="mailto:info@devstudio.com"
+                >info@devstupdio.com</a
+              >
+            </li>
+            <li>
+              <a class="address-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
         </address>
       </div>
     </header>
@@ -62,20 +60,16 @@
       <!-- Hero page -->
       <section class="section hero-page">
         <div class="container">
-          <div class="hero-wrap">
-            <h1 class="hero-page-title">
-              Effective Solutions for Your Business
-            </h1>
-            <button class="order-service-button" type="button">
-              Order Service
-            </button>
-          </div>
+          <h1 class="hero-page-title">Effective Solutions for Your Business</h1>
+          <button class="order-service-button" type="button">
+            Order Service
+          </button>
         </div>
       </section>
       <!--  Features -->
       <section class="section features-section">
         <div class="container">
-          <h2 class="features-title visually-hidden">Features</h2>
+          <h2 class="visually-hidden">Features</h2>
           <ul class="features-list">
             <li class="features-item">
               <h3 class="features-list-title">Strategy</h3>
@@ -119,8 +113,10 @@
                 alt="mark-guerrero-photo"
                 width="264"
               />
-              <h3 class="team-member-name">Mark Guerrero</h3>
-              <p class="team-member-spec">Product Designer</p>
+              <div class="team-member-info">
+                <h3 class="team-member-name">Mark Guerrero</h3>
+                <p class="team-member-spec">Product Designer</p>
+              </div>
             </li>
             <li class="team-member">
               <img
@@ -128,8 +124,10 @@
                 alt="tom-ford-photo"
                 width="264"
               />
-              <h3 class="team-member-name">Tom Ford</h3>
-              <p class="team-member-spec">Frontend Developer</p>
+              <div class="team-member-info">
+                <h3 class="team-member-name">Tom Ford</h3>
+                <p class="team-member-spec">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-member">
               <img
@@ -137,8 +135,10 @@
                 alt="camila-garcia-photo"
                 width="264"
               />
-              <h3 class="team-member-name">Camila Garcia</h3>
-              <p class="team-member-spec">Marketing</p>
+              <div class="team-member-info">
+                <h3 class="team-member-name">Camila Garcia</h3>
+                <p class="team-member-spec">Marketing</p>
+              </div>
             </li>
             <li class="team-member">
               <img
@@ -146,8 +146,10 @@
                 alt="daniel-wilson-photo"
                 width="264"
               />
-              <h3 class="team-member-name">Daniel Wilson</h3>
-              <p class="team-member-spec">UI Designer</p>
+              <div class="team-member-info">
+                <h3 class="team-member-name">Daniel Wilson</h3>
+                <p class="team-member-spec">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
